[gd_scene load_steps=3 format=3 uid="uid://ch0ixswfhoala"]

[ext_resource type="Script" uid="uid://y8ckm0sgdq0t" path="res://script/___Text.gd" id="1_swip7"]
[ext_resource type="Theme" uid="uid://lfadr6lj8hjs" path="res://Resource/Font/Digital.tres" id="2_31ov6"]

[node name="Text" type="HFlowContainer"]
offset_bottom = 44.0
script = ExtResource("1_swip7")
ftheme = ExtResource("2_31ov6")

[connection signal="activate" from="." to="." method="_on_activate"]
[connection signal="deactivate" from="." to="." method="_on_deactivate"]
[connection signal="done" from="." to="." method="_on_done"]
[connection signal="word_entered" from="." to="." method="_on_word_entered"]
[connection signal="word_indicated" from="." to="." method="_on_word_indicated"]
[connection signal="word_selected" from="." to="." method="_on_word_selected"]
